fix: #162 修复 macOS 系统桌面端窗口控件重叠问题 | Fix macOS desktop window control overlap problem.

--- a/style/module/bar.less
+++ b/style/module/bar.less
@@ -74,7 +74,7 @@
     background-color: var(--custom-tool-bar-background-color);
 
     // macOS 系统桌面端窗口控件位置
-    body.body--blur:not(.body--win32) & {
+    body:not(.body--win32) & {
         padding-left: 69px;
     }
 
